css/style.css
*, *::after, *::before {
    margin: 0;
    padding:0;
    box-sizing: border-box;
}

:root {
    --Green-400: rgb(38, 192, 171);
    --Green-400-trans :rgba(38, 192, 171, 0.3);
    --Green-900: hsl(183, 100%, 15%);
    --Grey-500: hsl(186, 14%, 43%);
    --Grey-400: hsl(184, 14%, 56%);
    --Grey-200: hsl(185, 41%, 84%);
    --Grey-50: hsl(189, 47%, 97%);
    --White: hsl(0, 100%, 100%);
    --border-radius : 20px;
}

body {
    background-color: var(--Grey-200);
    display:flex;
    flex-direction: column;
    justify-content:center;
    align-items: center;
    gap: 10px;
    height: 100vh;
    font-family: "Space Mono",sans-serif;
    font-size: 16px;
    font-weight: 700;
}

header {
    margin-top: 30px;
}

main {
    background-color: var(--White);
    border-radius: var(--border-radius);
    padding:20px;
    width:320px;
    margin-top:20px;
}

legend {
    all: unset;
    color:var(--Grey-500)
}

fieldset {
    all: unset;
}

input {
    all: unset;
    background-color:var(--Grey-50);
    text-align: end;
    padding: 10px;
    max-width: 260px;
    font-size: 24px;
    color:var(--Green-900);
    margin-bottom: 20px;
    border-radius: 5px;
    border: 1px solid var(--White);
}

input::placeholder {
    color: var(--Grey-400);
}

input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type="number"] {
  -moz-appearance: textfield;
}

#bill-total {
    background-image: url("../images/icon-dollar.svg");
    background-repeat: no-repeat;
    background-position: 10px center;
}

#number-people {
    background-image: url("../images/icon-person.svg");
    background-repeat: no-repeat;
    background-position: 10px center;
}

#tip-selection {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
    gap: 10px; 
    grid-auto-rows: 1fr;
    margin-bottom: 30px;
}

#tip-selection legend {
    grid-column: 1/3;
    grid-row: 1;
    margin-bottom: 10px;
}

.tip {
    background-color: var(--Green-900);
    color: var(--White);
    border:none;
    font-family: "Space Mono",sans-serif;
    padding:10px 10px;
    border-radius: 5px;
    font-size: 24px;
    font-weight: 700;
}

.tip:hover, input:hover,#reset:hover {
    cursor: pointer;
}

.tip:hover {
    background-color: var(--Green-400);
    color:var(--Green-900);
}

input:hover {
    border:1px solid var(--Green-400);
}

#results {
    background-color: var(--Green-900);
    color:var(--White);
    padding:20px;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap:20px;
}

.result-subtitle {
 font-size: 12px;
 color: var(--Grey-400);
}

.result {
    display: grid;
    grid-template-columns: 2;
    grid-template-rows: 2;
}

.result-title {
    grid-column: 1;
    grid-row: 1;
}

.result-subtitle {
    grid-column: 1;
    grid-row: 2;
}

output {
    grid-column: 2;
    grid-row:1/3;
    justify-self: end;
    align-self: center;
    color: var(--Green-400);
    font-size: 26px;
}

#reset {
    background-color: var(--Green-400-trans);
    color: var(--Green-900);
    border:none;
    font-family: "Space Mono",sans-serif;
    border-radius: 5px;
    font-size: 24px;
    font-weight: 700;
    padding:10px 0px;
}

#reset:hover {
    background-color: var(--Green-400);
}

#custom-tip {
    margin-bottom:0px;
}

.attribution { font-size: 11px; text-align: center; }
.attribution a { color: hsl(228, 45%, 44%); }

@media (min-width: 1000px) {

    main {
        display: grid;
        grid-template-columns: repeat(2,1fr);
        grid-template-rows: 1;
        gap: 40px;
        padding:30px 40px;
        width:920px;
    }
           
    input {
        max-width: 400px;
    }

    #bill-total {
        background-position: 20px center;
        width:378px;
    }
    
    #number-people {
        background-position: 20px center;
        width:378px;
    }
    
    #tip-selection {
        gap: 15px;
    }

    #results {
        padding:40px;
        justify-content: center;
        gap:0px;
        border-radius: var(--border-radius)
    }
    
    .result {
        margin-bottom: 20px;
    }

    .result-subtitle {
     font-size: 14px;
    }
        
    output {
        font-size: 40px;
    }
    
    #reset {
        margin-top: 100px;
    }
}

